Fix flickering text bug
Font size changes when truncated class is added/removed, thus making it flickering

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -166,8 +166,11 @@
 .status.large .status-card :is(.content, .poll, .media-container) {
   max-height: 80vh !important;
 }
-.status-card :is(.content.truncated, .poll, .media-container.truncated) {
+.status-card :is(.content, .poll, .media-container) {
   font-size: inherit !important;
+}
+.status-card :is(.content.truncated, .poll, .media-container.truncated) {
+  /* font-size: inherit !important; */
   mask-image: linear-gradient(to bottom, #000 80px, transparent);
 }
 .status.small
